feat: updated style for view desktop

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -178,7 +178,7 @@
                         <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/ttQDNroq3LA"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
-                    <p class="section__paragaph"><strong>will-change: name</strong> - używamy tylko wtedy gdy mamy
+                    <p class="section__paragraph"><strong>will-change: name</strong> - używamy tylko wtedy gdy mamy
                         problem z
                         wydajnością. Nie używamy bez potrzeby, staramy się nie używać tego rozwiązania.</p>
                     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/will-change"
@@ -283,7 +283,7 @@
                         zajmującą się wytycznymi dotyczących tworzenia dostępnych serwisów internetowych.</p>
                     <section class="card">
                         <h4 class="card__header">Porady</h4>
-                        <ul>
+                        <ul class="card__list">
                             <li>Pisz semantycznie.</li>
                             <li>Trzymaj kontrast.</li>
                             <li>Odpowiednio dobieraj kolory.</li>
