--- a/src/content/fourth.html
+++ b/src/content/fourth.html
@@ -304,7 +304,7 @@
                                     undefined)</li>
                             </ul>
                         </section>
-                        <p class="section__paragrapf">Stworzenie funkcji</p>
+                        <p class="section__paragraph">Stworzenie funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">function calculate(x) {
                             x = x + 5;
@@ -312,7 +312,7 @@
                             return x*8;
                             }
                         </code></pre>
-                        <p class="section__paragrapf">Wywołanie funkcji</p>
+                        <p class="section__paragraph">Wywołanie funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">calculate(5);</code></pre>
                         <section class="card">
@@ -324,14 +324,14 @@
                                 <li>Odpowiedzialność za wykonywanie zadania w jednym miejscu</li>
                             </ul>
                         </section>
-                        <p class="section__paragrph">(Fat) arrow functions - funkcja strzałkowa</p>
+                        <p class="section__paragraph">(Fat) arrow functions - funkcja strzałkowa</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">const calculate = (x) => {
                             x = x + 5;
                             return x*8;
                             }
                         </code></pre>
-                        <p class="section__paragrph">Skrócony zapis</p>
+                        <p class="section__paragraph">Skrócony zapis</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">const calculate = x => (x+5)*8</code></pre>
                         <section class="card">
@@ -402,7 +402,7 @@
                     <h3 class="section__header">Normalizacja, reset</h3>
                     <p class="section__paragraph">Każda przeglądarka posiada swoje style domyślne. Normalizację i
                         reset stosujemy, żeby te style były wszędzie takie same.</p>
-                    <p class="section__paragrph">Przykładowy reset:</p>
+                    <p class="section__paragraph">Przykładowy reset:</p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-css section__code">* {
                         margin:0;
