--- a/src/content/sixth.html
+++ b/src/content/sixth.html
@@ -169,12 +169,12 @@
             <div class="wrapper">
                 <section class="section" id="object">
                     <h3 class="section__header">Objekty</h3>
-                    <p class="section__paragarph">Obiekt jest strukturą danych w JS.</p>
+                    <p class="section__paragraph">Obiekt jest strukturą danych w JS.</p>
                     <p class="section__paragraph"><strong>key:value</strong> (klucz:wartość) - format zapisu własności
                         (property), metod (methods) obiektu</p>
                     <p class="section__paragraph">klucz - musi być unikalny w ramach obiektu</p>
                     <p class="section__paragraph">wartość - prymitywy / funkcje / zagnieżdżenia</p>
-                    <p class="ection__paragraph">Dot notation - notacja kropkowa:</p>
+                    <p class="section__paragraph">Dot notation - notacja kropkowa:</p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-js section__code">const deathStar = {
                         diameter: 120000,
@@ -204,7 +204,7 @@
 
                         deathStar["population"]
                     </code></pre>
-                    <p class="section__paragrap">JSON = JavaScript Object Notation, uniwersalny format wymiany danych.
+                    <p class="section__paragraph">JSON = JavaScript Object Notation, uniwersalny format wymiany danych.
                     </p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-js section__code">{
@@ -218,7 +218,7 @@
                 </section>
                 <section class="section" id="pseudo">
                     <h3 class="section__header">Pseudoelementy</h3>
-                    <p class="section__paragarph">Pesudoelement umożliwia stylizowanie określonej części elementu, może
+                    <p class="section__paragraph">Pesudoelement umożliwia stylizowanie określonej części elementu, może
                         dodawać treść. Jest częścią elementu, więc wszystkie zmiany zachodzące są w obrębie tego
                         elementu. </p>
                     <ul class="section__list">
@@ -232,7 +232,7 @@
                     </ul>
                     <a class="section__link"
                         href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements">https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements</a>
-                    <h3 class="section__header">Pseudoklasy</h3>
+                    <h3 class="section__header section__header--space">Pseudoklasy</h3>
                     <ul class="section__list">
                         <li><strong>selektor:hover</strong> - wskazuje element, zmienia stan elementu po najechaniu</li>
                         <li><strong>selektor:visited</strong> - odpowiada za odwiedzone linki</li>
@@ -247,17 +247,17 @@
                 </section>
                 <section class="section" id="sass">
                     <h3 class="section__header">Sass</h3>
-                    <p class="section__paragarph">Sass jest preprocesorem CSS, dzięki któremu stylizowanie jest
+                    <p class="section__paragraph">Sass jest preprocesorem CSS, dzięki któremu stylizowanie jest
                         efektywniejsze, szybsze a sam kod staje się bardziej uporządkowany, co za tym idzie
                         czytelniejszy.</p>
-                    <p class="section__paragarph">Sass oferuje dwie składnie pisania. Składnia SASS, która opiera się na
+                    <p class="section__paragraph">Sass oferuje dwie składnie pisania. Składnia SASS, która opiera się na
                         wcięciach, oraz SCSS, która używa nawiasów klamrowych podobnie jak CSS.</p>
-                    <p class="section__paragarph"><strong>$zmienna</strong> - definiowanie zmiennej</p>
-                    <p class="section__paragarph"><strong>@mixin @include</strong> - przykład domieszki:</p>
+                    <p class="section__paragraph"><strong>$zmienna</strong> - definiowanie zmiennej</p>
+                    <p class="section__paragraph"><strong>@mixin @include</strong> - przykład domieszki:</p>
                     <img class="image" src="img/mixin.webp" alt="mixin w sass">
-                    <p class="section__paragarph"><strong>@extend</strong> - przykład:</p>
+                    <p class="section__paragraph"><strong>@extend</strong> - przykład:</p>
                     <img src="img/extend.webp" alt="extend w sass" class="image">
-                    <p class="section__paragarph"><strong>&</strong> - parent selector:</p>
+                    <p class="section__paragraph"><strong>&</strong> - parent selector:</p>
                     <img src="img/parent-selector.webp" alt="parent selector dla sass" class="image">
                     <a class="section__link"
                         href="https://sass-lang.com/documentation">https://sass-lang.com/documentation</a>
@@ -265,7 +265,7 @@
                 </section>
                 <section class="section" id="node">
                     <h3 class="section__header">Node.js</h3>
-                    <p class="section__paragarph">Node.js to środowisko do uruchamiania aplikacji napisanych w języku JS
+                    <p class="section__paragraph">Node.js to środowisko do uruchamiania aplikacji napisanych w języku JS
                         poza przeglądarką.</p>
                     <a class="section__link" href="https://nodejs.org">https://nodejs.org</a>
                     <p class="section__paragraph">npm - menadżer paczek rozszerzających funkcjonalność środowiska
@@ -290,10 +290,10 @@
                 </section>
                 <section class="section" id="starter">
                     <h3 class="section__header">WTF GULP STARTER KIT</h3>
-                    <p class="section__paragrap">Pobranie WTF GULP STARTER KIT:</p>
+                    <p class="section__paragraph">Pobranie WTF GULP STARTER KIT:</p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-shell section__code">git clone https://github.com/maciejkorsan/wtf-gulp-starter</code></pre>
-                    <p class="section__paragarph">Gulp - task runner, służy do automatyzacji zadań w projekcie.</p>
+                    <p class="section__paragraph">Gulp - task runner, służy do automatyzacji zadań w projekcie.</p>
                     <a href="https://gulpjs.com" class="section__link">https://gulpjs.com</a>
                     <p class="section__paragraph"><strong>npm install gulp-cli --global</strong> - instalacja gulpa
                         globalnie</p>
