--- a/second.html
+++ b/second.html
@@ -244,11 +244,11 @@
                         <li>pozwalają na grupowanie elementów (class)</li>
                         <li>pozwalają na identyfikowanie elementów (id)</li>
                         <li>można je miksować</li>
-                        <li>spis atrybutów globalnych <br>
-                            <a class="section__link"
-                                href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes">
-                                https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes</a>
+                        <li>spis atrybutów globalnych:
                         </li>
+                        <a class="section__link"
+                            href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes">
+                            https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes</a>
                     </ul>
 
                 </section>
@@ -293,7 +293,7 @@
                         praktyką.</p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-html section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code></pre>
-                    <p class="section__paragraph">Styl w znaczniku "style"- z takim stylowaniem możemy się spotkać,
+                    <p class="section__paragraph">Styl w znaczniku "style" - z takim stylowaniem możemy się spotkać,
                         jednak najczęściej najlepszym wyborem jest używanie stylów w osobnym pliku "style.css".</p>
                     <img class="image" src="img/style-markup.webp" alt="przykład stylów w znaczniku style">
                     <p class="section__paragraph section__paragraph--position">Style osadzone w zanczniku "style".
@@ -307,7 +307,7 @@
                             ważności.</p>
                         <img src="img/specificity.webp" alt="specyficzność css" class="image">
                         <p class="card__paragraph"><strong>Materiały uzupełniające:</strong></p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><a class="card__link" href="http://makble.com/css-rule-priority-and-specificity">CSS
                                     rule priority and specificity
                                 </a></li>
