--- a/fifth.html
+++ b/fifth.html
@@ -168,18 +168,13 @@
             <div class="wrapper">
                 <section class="section" id="form">
                     <h3 class="section__header">Formularze</h3>
-                    <p class="section__paragarph"><strong>&lt;form&gt;...&lt;/form&gt;</strong> - znacznik formularza,
+                    <p class="section__paragraph"><strong>&lt;form&gt;...&lt;/form&gt;</strong> - znacznik formularza,
                         opakowujący</p>
                     <p class="section__paragraph">Atrybuty:</p>
                     <ul class="section__list">
                         <li><strong>action="url"</strong> - adres serwera/programu przetwarzającego dane formularza</li>
                         <li><strong>method="post"</strong> - metoda wysłania danych, get - dane w adresie url, post -
                             dane są w treści formularza</li>
-                    </ul>
-                    <p class="section__paragarph"><strong>&lt;input&gt;...&lt;/input&gt;</strong> - znacznik
-                        wprowadzania danych </p>
-                    <p class="section__paragraph">Atrybuty:</p>
-                    <ul class="section__list">
                         <li><strong>name="nazwaPola"</strong> - nazwa wykorzystywana do identyfikacji danych wejściowych
                         </li>
                         <li><strong>id="idPola"</strong> - używamy do odniesienia się do label for=""</li>
@@ -187,9 +182,11 @@
                         <li><strong>value="wartość pola"</strong> - aktualna wartość pola</li>
                         <li><strong>placeholder= "Tekst podpowiedzi"</strong></li>
                     </ul>
+                    <p class="section__paragraph"><strong>&lt;input&gt;...&lt;/input&gt;</strong> - znacznik
+                        wprowadzania danych </p>
                     <section class="card">
                         <h4 class="card__header">Typy danych input</h4>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>text</strong> - wprowadzane dane tekstowe</li>
                             <li><strong>radio</strong> - przycisk radio, wybór jednej wartości z wielu opcji</li>
                             <li><strong>checkbox</strong> - pole wyboru poprzez jego zaznaczenie/odznaczenie</li>
@@ -206,7 +203,7 @@
                             <li><strong>submit</strong> - wysłanie danych formularza</li>
                         </ul>
                     </section>
-                    <p class="section__paragarph"><strong>&lt;label&gt;...&lt;/label&gt;</strong> - etykieta pola input
+                    <p class="section__paragraph"><strong>&lt;label&gt;...&lt;/label&gt;</strong> - etykieta pola input
                     </p>
                     <p class="section__paragraph">Atrybut:</p>
                     <ul class="section__list">
@@ -214,15 +211,15 @@
                     </ul>
                     <p class="section__paragraph wrong">Atrybut <strong>placeholder</strong> nie zastępuje elementu
                         label.</p>
-                    <p class="section__paragarph"><strong>&lt;fieldset&gt;...&lt;/fieldset&gt;</strong> - do grupowania
+                    <p class="section__paragraph"><strong>&lt;fieldset&gt;...&lt;/fieldset&gt;</strong> - do grupowania
                         input</p>
-                    <p class="section__paragarph"><strong>&lt;legend&gt;...&lt;/legend&gt;</strong> - opis grupy input
+                    <p class="section__paragraph"><strong>&lt;legend&gt;...&lt;/legend&gt;</strong> - opis grupy input
                         &lt;fieldset&gt;</p>
-                    <p class="section__paragarph"><strong>&lt;select&gt;...&lt;/select&gt;</strong> - grupowanie opcji
+                    <p class="section__paragraph"><strong>&lt;select&gt;...&lt;/select&gt;</strong> - grupowanie opcji
                         wyboru</p>
-                    <p class="section__paragarph"><strong>&lt;option&gt;...&lt;/option&gt;</strong> - dziecko znacznika
+                    <p class="section__paragraph"><strong>&lt;option&gt;...&lt;/option&gt;</strong> - dziecko znacznika
                         select, opcje wyboru</p>
-                    <p class="section__paragarph"><strong>&lt;textarea&gt;...&lt;/textarea&gt;</strong> - wprowadzanie
+                    <p class="section__paragraph"><strong>&lt;textarea&gt;...&lt;/textarea&gt;</strong> - wprowadzanie
                         dłuższego tekstu</p>
                     <p class="section__paragraph">Walidacja:</p>
                     <p class="section__paragraph"><strong>required</strong> - pole jest wymagane</p>
@@ -232,7 +229,7 @@
                 </section>
                 <section class="section" id="grid">
                     <h3 class="section__header">CSS Grid</h3>
-                    <p class="section__paragarph">Grid służy do tworzenia layoutów.</p>
+                    <p class="section__paragraph">Grid służy do tworzenia layoutów.</p>
                     <img class="image" src="img/grid-concepts.svg" alt="grid">
                     <p class="section__paragraph">Źródło: <a class="section__link"
                             href="https://webkit.org/blog/7434/css-grid-layout-a-new-layout-module-for-the-web/">https://webkit.org/blog/7434/css-grid-layout-a-new-layout-module-for-the-web/</a>
@@ -240,7 +237,7 @@
                     <section class="card">
                         <h4 class="card__header">Właściwości</h4>
                         <p class="card__paragraph">Grid container</p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>grid-template-columns</strong> - ustawianie kolumn</li>
                             <li><strong>grid-template-rows</strong> - ustawianie wierszy</li>
                             <li><strong>grid-column-gap</strong> - odstęp między elementami w kontekście kolumny</li>
@@ -254,7 +251,7 @@
                             </li>
                         </ul>
                         <p class="card__paragraph">Grid item</p>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li><strong>grid-area</strong> - określa wielkość i położenie elementu w obrębie siatki</li>
                             <li><strong>grid-row-start:</strong> numer / [nazwa] / span - definiuje, od której linii
                                 poziomej element ma się
@@ -272,20 +269,20 @@
 
                         </ul>
                     </section>
-                    <p class="section__paragarph">Jednostka <strong>fr</strong>, czyli ułamek wolnej przestrzeni.</p>
+                    <p class="section__paragraph">Jednostka <strong>fr</strong>, czyli ułamek wolnej przestrzeni.</p>
                 </section>
                 <section class="section" id="mQueries">
                     <h3 class="section__header">Media queries</h3>
-                    <p class="section__paragarph">RWD (Responsive web design) to tworzenie stron dopasowujących się do
+                    <p class="section__paragraph">RWD (Responsive web design) to tworzenie stron dopasowujących się do
                         urządzenia, na którym jest wyświetlana.</p>
-                    <p class="section__paragarph"><strong>@media</strong> - słowo kluczowe, własność, dzięki któremu
+                    <p class="section__paragraph"><strong>@media</strong> - słowo kluczowe, własność, dzięki któremu
                         możemy decydować co się ma zadziać na danym urządzeniu, w danej rozdzielczości.</p>
-                    <p class="section__paragarph"><strong>@media</strong> screen, print, all... - wybór typu
+                    <p class="section__paragraph"><strong>@media</strong> screen, print, all... - wybór typu
                         urządzenia (media type).</p>
-                    <p class="section__paragarph"><strong>@media</strong> min-width, max-width, color, aspect-ratio,
+                    <p class="section__paragraph"><strong>@media</strong> min-width, max-width, color, aspect-ratio,
                         orientation... - określamy jakie style, w którym momencie powinny się znajdować (media feature).
                     </p>
-                    <p class="section__paragarph"><strong>and / not / ,</strong> - operatory
+                    <p class="section__paragraph"><strong>and / not / ,</strong> - operatory
                     </p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-css section__code">@media screen and (min-width: 812px) and (orientation: landscape){
