--- a/fourth.html
+++ b/fourth.html
@@ -304,7 +304,7 @@
                                     undefined)</li>
                             </ul>
                         </section>
-                        <p class="section__paragrapf">Stworzenie funkcji</p>
+                        <p class="section__paragraph">Stworzenie funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">function calculate(x) {
                             x = x + 5;
@@ -312,7 +312,7 @@
                             return x*8;
                             }
                         </code></pre>
-                        <p class="section__paragrapf">Wywołanie funkcji</p>
+                        <p class="section__paragraph">Wywołanie funkcji</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">calculate(5);</code></pre>
                         <section class="card">
@@ -324,14 +324,14 @@
                                 <li>Odpowiedzialność za wykonywanie zadania w jednym miejscu</li>
                             </ul>
                         </section>
-                        <p class="section__paragrph">(Fat) arrow functions - funkcja strzałkowa</p>
+                        <p class="section__paragraph">(Fat) arrow functions - funkcja strzałkowa</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">const calculate = (x) => {
                             x = x + 5;
                             return x*8;
                             }
                         </code></pre>
-                        <p class="section__paragrph">Skrócony zapis</p>
+                        <p class="section__paragraph">Skrócony zapis</p>
                         <pre class="data-pre data-pre--white-space">
                         <code class="language-js section__code">const calculate = x => (x+5)*8</code></pre>
                         <section class="card">
@@ -362,7 +362,7 @@
                     </ul>
                     <section class="card">
                         <h4 class="card__header">Dobre źródła</h4>
-                        <ul class="card__list">
+                        <ul class="card__list card__list--no-style">
                             <li>GitHub issues</li>
                             <li><a class="card__link"
                                     href="https://developer.mozilla.org">https://developer.mozilla.org</a></li>
@@ -379,7 +379,7 @@
                 </section>
                 <section class="section" id="markup">
                     <h3 class="section__header">Znaczniki - listy, tabele, definicje</h3>
-                    <ul class="section__list">
+                    <ul class="section__list section__list--no-style">
                         <li><strong>&lt;ul&gt;...&lt;/ul&gt;</strong> - UnorderedList, lista nieuporządkowana</li>
                         <li><strong>&lt;ol&gt;...&lt;/ol&gt;</strong> - Ordered List, lista uporządkowana</li>
                         <li><strong>&lt;li&gt;...&lt;/li&gt;</strong> - List Item, element listy </li>
@@ -402,7 +402,7 @@
                     <h3 class="section__header">Normalizacja, reset</h3>
                     <p class="section__paragraph">Każda przeglądarka posiada swoje style domyślne. Normalizację i
                         reset stosujemy, żeby te style były wszędzie takie same.</p>
-                    <p class="section__paragrph">Przykładowy reset:</p>
+                    <p class="section__paragraph">Przykładowy reset:</p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-css section__code">* {
                         margin:0;
