--- a/ninth.html
+++ b/ninth.html
@@ -208,7 +208,7 @@
                 <section class="section" id="css">
                     <h3 class="section__header">CSS - kompatybilność</h3>
                     <p class="section__paragraph"><strong>Narzędzia do sprawdzania:</strong></p>
-                    <ul class="section__list">
+                    <ul class="section__list section__list--no-style">
                         <li><a href="https://browserstack.com" class="section__link">https://browserstack.com</a></li>
                         <li><a href="http://browsershots.org" class="section__link">http://browsershots.org</a></li>
                         <li><a href="https://crossbrowsertesting.com"
