--- a/seventh.html
+++ b/seventh.html
@@ -170,7 +170,7 @@
             <div class="wrapper">
                 <section class="section" id="prefixes">
                     <h3 class="section__header">Prefiksy</h3>
-                    <p class="section__paragarph">Prefiksy, czyli przedrostki pozwalające na używanie nowych
+                    <p class="section__paragraph">Prefiksy, czyli przedrostki pozwalające na używanie nowych
                         właściwości, funkcji CSS, które zostały dodane do przeglądarki w fazie eksperymentalnej.</p>
                     <section class="card">
                         <h4 class="card__header">Przykład dodania właściwości flexbox</h4>
@@ -188,7 +188,7 @@
                 </section>
                 <section class="section" id="gfonts">
                     <h3 class="section__header">Google fonts</h3>
-                    <p class="section__paragarph">Google fonts - fonty od Google.</p>
+                    <p class="section__paragraph">Google fonts - fonty od Google.</p>
                     <p class="section__paragraph"> latin-extended - obsługa polskich znaków</p>
                     <a href="https://fonts.google.com/" class="section__link">https://fonts.google.com/</a>
                     <section class="card">
@@ -215,7 +215,7 @@
                 </section>
                 <section class="section" id="branche">
                     <h3 class="section__header">GIT: branche</h3>
-                    <p class="section__paragarph">Branche:</p>
+                    <p class="section__paragraph">Branche:</p>
                     <ul class="section__list">
                         <li>pozwalają na bezkarne testowanie</li>
                         <li>służą do bardziej efektywnego rozwijania oprogramowania</li>
@@ -233,8 +233,8 @@
                 </section>
                 <section class="section" id="markdown">
                     <h3 class="section__header">Markdown</h3>
-                    <p class="section__paragarph">Markdown - język znaczników do formatowania tekstu.</p>
-                    <p class="section__paragaph"> <strong>Nagłówki:</strong></p>
+                    <p class="section__paragraph">Markdown - język znaczników do formatowania tekstu.</p>
+                    <p class="section__paragraph"> <strong>Nagłówki:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">
                         # Nagłówek (H1)
@@ -242,32 +242,32 @@
                         ### Nagłówek III (H3)
                         #### Nagłówek IV (H4)
                     </code></pre>
-                    <p class="section__paragaph"> <strong>Link:</strong></p>
+                    <p class="section__paragraph"> <strong>Link:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">[DIGI-CHIP](https://digi-chip.pl)</code></pre>
-                    <p class="section__paragaph"> <strong>Obrazek:</strong></p>
+                    <p class="section__paragraph"> <strong>Obrazek:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">![Alt obrazka](https://url.do/obrazka.jpg)</code></pre>
-                    <p class="section__paragaph"> <strong>Polecenie/jednolinijkowy kod:</strong></p>
+                    <p class="section__paragraph"> <strong>Polecenie/jednolinijkowy kod:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">`node main.js`</code></pre>
-                    <p class="section__paragaph"> <strong>Blok kodu:</strong></p>
+                    <p class="section__paragraph"> <strong>Blok kodu:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">```javascript
                         consol.log('hello world');
                         alert('hello world');
                         ```
                     </code></pre>
-                    <p class="section__paragaph"> <strong>Formatowanie tekstu:</strong></p>
+                    <p class="section__paragraph"> <strong>Formatowanie tekstu:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">*tekst* - kursywa
                         **tekst** - pogrubienie
                         ***tekst*** - pogrubienie + kursywa
                     </code></pre>
-                    <p class="section__paragaph"> <strong>Cytat:</strong></p>
+                    <p class="section__paragraph"> <strong>Cytat:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code"> > Lepiej zaliczać się do niektórych, niż do wszystkich.</code></pre>
-                    <p class="section__paragaph"> <strong>Elementy listy:</strong></p>
+                    <p class="section__paragraph"> <strong>Elementy listy:</strong></p>
                     <pre class="data-pre data-pre--white-space">
                     <code class="language-md section__code">
                         - tekst
@@ -407,14 +407,14 @@
                 </section>
                 <section class="section" id="data">
                     <h3 class="section__header">JS: Przechowywanie danych</h3>
-                    <p class="section__paragarph"><strong>document.cookie</strong> - pobranie ciastka</p>
-                    <p class="section__paragarph"><strong>document.cookie = "nazwa = wartość"</strong> - dodanie ciastka
+                    <p class="section__paragraph"><strong>document.cookie</strong> - pobranie ciastka</p>
+                    <p class="section__paragraph"><strong>document.cookie = "nazwa = wartość"</strong> - dodanie ciastka
                     </p>
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie
                     " class="section__link">https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie</a>
-                    <p class="section__paragarph"><strong>Local / session storage:</strong></p>
-                    <p class="section__paragarph">Localstorage - trwa do ręcznego wyczyszczenia (trwalsze).</p>
-                    <p class="section__paragarph">Sessionstorage - trwa do zamknięcia sesji (zakładki przeglądarki).</p>
+                    <p class="section__paragraph"><strong>Local / session storage:</strong></p>
+                    <p class="section__paragraph">Localstorage - trwa do ręcznego wyczyszczenia (trwalsze).</p>
+                    <p class="section__paragraph">Sessionstorage - trwa do zamknięcia sesji (zakładki przeglądarki).</p>
                     <section class="card">
                         <h4 class="card__header">Zastosowanie</h4>
                         <p class="card__paragraph">Dodaje klucz i wartość, ustawia wartości w localstorage.</p>
