feat: added links for game page

--- a/src/content/game.html
+++ b/src/content/game.html
@@ -193,6 +193,19 @@
                                     osobami podejmujesz wyzwanie prawdziwego kodera! Sięgnij po mistrzostwo!</span>
                             </a>
                         </li>
+                        <li class="game__item"><a href="https://www.codingame.com/start" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover5"><span
+                                    class="game__title">CodinGame</span><span class="game__description">Nowy sposób na
+                                    poprawę umiejętności programistycznych podczas zabawy i bycia zauważonym.</span>
+                            </a>
+                        </li>
+                        <li class="game__item"><a href="https://pl.spoj.com/problems/latwe/" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover6"><span
+                                    class="game__title">Sphere online judge</span><span class="game__description">Zostań
+                                    prawdziwym mistrzem programowania. Dowiedz się, jak kodować i budować wydajne
+                                    algorytmy.</span>
+                            </a>
+                        </li>
                     </ul>
                 </section>
             </div>
