feat: added defer video for iframe load

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -204,7 +204,7 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition"
                         class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/transition</a>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/ttQDNroq3LA"
+                        <iframe class="section__resp-iframe" data-src="https://www.youtube.com/embed/ttQDNroq3LA"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                     <p class="section__paragraph"><strong>will-change: name</strong> - używamy tylko wtedy gdy mamy
@@ -254,7 +254,7 @@
                              }
                         }</code></pre>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/FNmv5uh3ni4"
+                        <iframe class="section__resp-iframe" data-src="https://www.youtube.com/embed/FNmv5uh3ni4"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties"
