--- a/src/content/ninth.html
+++ b/src/content/ninth.html
@@ -202,11 +202,11 @@
                         określający zasady projektowania API. Nie jest to jedyny standard, ostatnio bardzo mocno zyskał
                         na popularności <strong>GraphQL</strong> i warto się nim zainteresować.</p>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/TBW35NvRgSw"
+                        <iframe class="section__resp-iframe" data-src="https://www.youtube.com/embed/TBW35NvRgSw"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/P9b8-BrWdYs"
+                        <iframe class="section__resp-iframe" data-src="https://www.youtube.com/embed/P9b8-BrWdYs"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                     <a href="https://www.getpostman.com/downloads/" class="section__link">Narzędzie POSTMAN</a>
@@ -266,7 +266,7 @@
                     <p class="section__paragraph"><strong>Hoisting</strong> - to przenoszenie deklaracji funkcji i
                         zmiennych na początek naszego kodu, a właściwie na początek zakresu.</p>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/9E5a6j8IIn4"
+                        <iframe class="section__resp-iframe" data-src="https://www.youtube.com/embed/9E5a6j8IIn4"
                             allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                     <p class="section__paragraph"><strong>Use strict</strong> - zakres reguł, które muszą zostać
@@ -274,8 +274,9 @@
                     <p class="section__paragraph"><strong>Destrukturyzacja</strong> - wyciąganie "zmiennych" z obiektów
                         i tablic do zewnętrznych zmiennych.</p>
                     <div class="section__resp-container">
-                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/eA2YRceiDwk?start=354"
-                            allow="encrypted-media" allowfullscreen></iframe>
+                        <iframe class="section__resp-iframe"
+                            data-src="https://www.youtube.com/embed/eA2YRceiDwk?start=354" allow="encrypted-media"
+                            allowfullscreen></iframe>
                     </div>
                     <p class="section__paragraph"><strong>...spread operator</strong> przykład:</p>
                     <pre class="data-pre data-pre--white-space">
