--- a/game.html
+++ b/game.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="pl">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notatnik frontendowca</title>
+    <meta name="description" content="Notatnik - projekt, który powstał podczas uczenia się podstaw frontendu." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Notatnik frontendowca" />
+    <meta property="og:description"
+        content="Notatnik - projekt, który powstał podczas uczenia się podstaw frontendu." />
+    <meta property="og:url" content="https://andrzej-jablonski-project.github.io/Notatnik-frontendu/index.html" />
+    <meta property="og:image"
+        content="https://andrzej-jablonski-project.github.io/Notatnik-frontendu/assets/img/cover.png" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/pwa/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/pwa/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/pwa/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/pwa/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/pwa/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/pwa/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/pwa/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/pwa/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/pwa/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/pwa/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/pwa/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/pwa/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/pwa/icons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/pwa/icons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -142,6 +170,8 @@
                         <li class="menu__item">Flexbox Froggy</li>
                         <li class="menu__item">Grid Garden</li>
                         <li class="menu__item">Codewars</li>
+                        <li class="menu__item">...</li>
+
                     </ul>
                 </a></li>
         </ul>
@@ -191,6 +221,19 @@
                                     class="game__title">codewars</span><span class="game__description">Popraw swoje
                                     umiejętności, trenując z innymi
                                     osobami podejmujesz wyzwanie prawdziwego kodera! Sięgnij po mistrzostwo!</span>
+                            </a>
+                        </li>
+                        <li class="game__item"><a href="https://www.codingame.com/start" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover5"><span
+                                    class="game__title">CodinGame</span><span class="game__description">Nowy sposób na
+                                    poprawę umiejętności programistycznych podczas zabawy i bycia zauważonym.</span>
+                            </a>
+                        </li>
+                        <li class="game__item"><a href="https://pl.spoj.com/problems/latwe/" target="_blank"
+                                rel="noopener noreferrer" class="game__link game__link--cover6"><span
+                                    class="game__title">Sphere online judge</span><span class="game__description">Zostań
+                                    prawdziwym mistrzem programowania. Dowiedz się, jak kodować i budować wydajne
+                                    algorytmy.</span>
                             </a>
                         </li>
                     </ul>
